gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: webapp-gateway
    namespace: istio-system
spec:
    selector:
        istio: ingressgateway # use Istio default gateway implementation
    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
       - "rajmehta.live"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
      - "rajmehta.live"
      tls:
        mode: SIMPLE
        credentialName: letsencrypt-staging

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: webapp-vs
spec:
    hosts:
    - "rajmehta.live"
    gateways:
    - istio-system/webapp-gateway
    http:
    - match:
        - uri:
            exact: /
      route:
      - destination:
            host: testpage
            port:
                number: 8080
